[project]
name = "tuzi-api"
description = "tu-zi API:Comfyui-tuzi-FluxProKontext"
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["fal-client", "torch"]

[project.urls]
Repository = "https://github.com/gokayfem/ComfyUI-fal-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gokayfem"
DisplayName = "ComfyUI-fal-API"
Icon = ""
